tests/fail/expr/closure.stderr
error[E0308]: mismatched types
 --> tests/fail/expr/closure.rs:2:25
  |
2 |     one_assert::assert!(|| true);
  |                         ^^^^^^^ expected `bool`, found closure
  |
  = note: expected type `bool`
          found closure `{closure@$DIR/tests/fail/expr/closure.rs:2:25: 2:27}`
help: use parentheses to call this closure
  |
2 |     one_assert::assert!((|| true)());
  |                         +       +++

error[E0308]: mismatched types
 --> tests/fail/expr/closure.rs:3:25
  |
3 |     one_assert::assert!(|| 5);
  |                         ^^^^ expected `bool`, found closure
  |
  = note: expected type `bool`
          found closure `{closure@$DIR/tests/fail/expr/closure.rs:3:25: 3:27}`

error[E0308]: mismatched types
 --> tests/fail/expr/closure.rs:4:25
  |
4 |     one_assert::assert!(|x: usize| x + 5);
  |                         ^^^^^^^^^^^^^^^^ expected `bool`, found closure
  |
  = note: expected type `bool`
          found closure `{closure@$DIR/tests/fail/expr/closure.rs:4:25: 4:35}`
